Fix for collapsed tables extending past right side of screen.
Also removed cruft body tag css.

--- a/www/less/styleoverrides.less
+++ b/www/less/styleoverrides.less
@@ -187,3 +187,15 @@ span.issues_separator{
 div.issues_container {
     margin-bottom:1.8em !important;
 }
+
+
+
+
+
+
+
+
+/* Temp fix to prevent right side of collapsed tables from extending offscreen. */
+*{
+    box-sizing:border-box;
+}
